Prevent long lists from overflowing

--- a/src/scripts/modules/media/body/body.less
+++ b/src/scripts/modules/media/body/body.less
@@ -136,6 +136,8 @@
 
   // A list with a title
   .list {
+    overflow-wrap: break-word;
+
     > .title {
       font-weight: bold;
     }
